finish the cdr route with macro pagination

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -896,7 +896,7 @@
         <script src="{{ url_for('static', filename='js/dashboard2.js') }}"></script>
         <!-- AdminLTE for demo purposes -->
         <script src="{{ url_for('static', filename='js/demo.js') }}"></script>
-        <script>
+        <!-- <script>
             $(function () {
               $('#example1').DataTable()
               $('#example2').DataTable({
@@ -908,7 +908,7 @@
                 'autoWidth'   : false
               })
             })
-        </script>
+        </script> -->
 
     </body>
 
