finish the cdr route with macro pagination

--- a/app/templates/macro_page.html
+++ b/app/templates/macro_page.html
@@ -1,30 +1,32 @@
 <!-- http://flask-sqlalchemy.pocoo.org/2.3/api/#flask_sqlalchemy.Pagination.iter_pages -->
 {% macro pagination(pages, route) %}
-<ul class="pagination pagination-lg">
-    <li>
-        {% if pages.has_prev %}
-        <a href="{{ url_for(route, page=pages.prev_num) }}" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        </a>
-        {% endif %}
-    </li>
-    {% for page in pages.iter_pages() %}
-    <li>
-        {% if page %}
-        {% if page != pages.page %}
-            <a href="{{ url_for(route, page=page) }}">{{ page }}</a>
-        {% endif %}
-        {% else %}
-        <span class=ellipsis>…</span>
-        {% endif %}
-    </li>
-    {% endfor %}
-    <li>
-        {% if cdrs.has_next %}
-        <a href="{{ url_for(route, page=pages.next_num) }}" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        </a>
-        {% endif %}
-    </li>
-</ul>
+    <nav aria-label="Page navigation" class="text-center">
+    <ul class="pagination pagination-lg">
+        <li>
+            {% if pages.has_prev %}
+            <a href="{{ url_for(route, page=pages.prev_num) }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            </a>
+            {% endif %}
+        </li>
+        {% for page in pages.iter_pages() %}
+        <li>
+            {% if page %}
+            {% if page != pages.page %}
+                <a href="{{ url_for(route, page=page) }}">{{ page }}</a>
+            {% endif %}
+            {% else %}
+            <span class=ellipsis>…</span>
+            {% endif %}
+        </li>
+        {% endfor %}
+        <li>
+            {% if cdrs.has_next %}
+            <a href="{{ url_for(route, page=pages.next_num) }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            </a>
+            {% endif %}
+        </li>
+    </ul>
+</nav>
 {% endmacro %}
